Changed banner position to fixed, increased its z-index to 1 and its width to 100%

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ header {
   background-color: #f63232;
   padding: 20px;
   text-align: center;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 .banner {
